Create section area with html and css

--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
     <title>Raihan's Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section>
+        <div class="half-width">
+            <h1>Welcome to </h1>
+            <h1 class="head"> <span class="orange-color">Abu Raihan</span> World!</h1>
+            <h3 class="heading-3">About Myself...</h3><br>
+            <p class="p-graph">I'm Raihan. I was born in Sherpur district but I live in Mymensingh division. I have one sisters and my parents. I have completed SSC in 2019. Now I am studying in Alomgir Munsur (Mintu) Memorial College at inter 2nd year in  science. I’ve been working on web design and development since 2020 for helping people to build their website, manage and develop functionality.I’m Passionate at web design and development. I work a minimum of 13-14 hours every day, I love to do this, it’s my life- everything. I learn new things every day.</p>
+               
+                <a href="www.google.com" target="_blank" class="link-btn">HIRE ME</a>
+        </div>
+        <div class="half-width"><img src="Images/my-bg.png" alt="Raihan"></div>
+
+    </section>
 </body>
+
 </html>
