Added some class

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="half-width">
             <h1 class="first-heading">Welcome to</h1>
         <h1> <span class="orange_color">Abu Raihan</span> world!</h1>
-        <h3>About me</h3>
+        <h3 class="third-heading">About me...</h3>
         <p class="p-graph">I'm Raihan. I was born in Sherpur district but I live in Mymensingh division. I have one sisters and my parents. I have completed SSC in 2019. Now I am studying in Alomgir Munsur (Mintu) Memorial College at inter 2nd year in  science. I’ve been working on web design and development since 2020 for helping people to build their website, manage and develop functionality.I’m Passionate at web design and development. I work a minimum of 13-14 hours every day, I love to do this, it’s my life- everything. I learn new things every day</p>
         
         <a href="https://www.facebook.com/aburaihan567" target="_blank" class="link_btn">HIRE ME</a>
