Added another section on project

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
+<link rel="shortcut icon" href="Images/my-bg.png" type="image/x-icon">
 <link rel="stylesheet" href="style.css">
     <title>Raihan Portfolio</title>
 </head>
@@ -22,6 +23,17 @@
     </div>
         <div class="half-width">
             <img src="Images/my-bg.png" alt="Raihan">
+        </div>
+    </section>
+    <section>
+        <div class="half-width">
+            <img src="images/my-bg2 (1).png" alt="Raihan">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p class="p-graph"> already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a href="#" target="_blank" class="link_btn">DONWLOAD RESUME</a>
         </div>
     </section>
     
