--- a/index.html
+++ b/index.html
@@ -6,34 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
-<link rel="shortcut icon" href="Images/my-bg.png" type="image/x-icon">
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
+<link rel="shortcut icon" href="Images/my-bg.png" type="image/x-icon">
     <title>Raihan Portfolio</title>
 </head>
 <body>
     <section>
         <div class="half-width">
-            <h1 class="first-heading">Welcome to</h1>
-        <h1> <span class="orange_color">Abu Raihan</span> world!</h1>
-        <h2 class="third-heading">About me...</h2>
-        <p class="p-graph">I'm Raihan. I was born in Sherpur district but I live in Mymensingh division. I have one sisters and my parents. I have completed SSC in 2019. Now I am studying in Alomgir Munsur (Mintu) Memorial College at inter 2nd year in  science. I’ve been working on web design and development since 2020 for helping people to build their website, manage and develop functionality.I’m Passionate at web design and development. I work a minimum of 13-14 hours every day, I love to do this, it’s my life- everything. I learn new things every day</p>
+            <h1 class="first_heading">Welcome To</h1>
+            <h1 class="second_heading"> <span class="orange_color">Abu Raihan</span>  World!</h1>
+            <h2 class="third_heading">About me...</h2>
+            <p class="p-graph">I'm Raihan. I was born in Sherpur district but I live in Mymensingh division. I have one sisters and my parents. I have completed SSC in 2019. Now I am studying in Alomgir Munsur (Mintu) Memorial College at inter 2nd year in  science. I’ve been working on web  development since 2020  manage and develop functionality.I’m Passionate at  development.  I love to do this, it’s my life and everything. I  trying to learn new things every day. It's all about me, Thank you.</p>
+            <a href="#" target="_blank" class="link_btn">HIRE ME</a>
         
-        <a href="https://www.facebook.com/aburaihan567" target="_blank" class="link_btn">HIRE ME</a>
-    </div>
+        </div>
         <div class="half-width">
-            <img src="Images/my-bg.png" alt="Raihan">
+            <img src="images/my-bg.png" alt="Raihan">
         </div>
     </section>
     <section>
         <div class="half-width">
-            <img src="images/my-bg2 (1).png" alt="Raihan">
+        <img src="images/my-bg2 (1).png" alt="Raihan">
         </div>
-        <div class="half-width">
+        <div>
             <h1>Dream Big</h1>
             <h2>Become a web developer</h2>
-            <p class="p-graph"> already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
-            <a href="#" target="_blank" class="link_btn">DONWLOAD RESUME</a>
+            <p  class="p-graph">I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a href="#" target="_blank" class="link_btn">DOWNLOAD RESUME</a>
         </div>
     </section>
     
