--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Raihan Portfolio</title>
 </head>
 <body>
-    <section>
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1 class="first_heading">Welcome To</h1>
             <h1 class="second_heading"> <span class="orange_color">Abu Raihan</span>  World!</h1>
@@ -25,7 +25,7 @@
             <img src="images/my-bg.png" alt="Raihan">
         </div>
     </section>
-    <section>
+    <section class=" dream-big flexible-container">
         <div class="half-width">
         <img src="images/my-bg2 (1).png" alt="Raihan">
         </div>
@@ -36,6 +36,26 @@
             <a href="#" target="_blank" class="link_btn">DOWNLOAD RESUME</a>
         </div>
     </section>
+    <section class="experience-iteam">
+     <div>
+         <h1>Experience</h1>
+         <div class="flexible-container">
+            <div id="full-stack-developer" class="developer">
+                <h2>Full Stack Web Development</h2>
+                <h3 class="orange_color">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="baby-developer" class="developer">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange_color">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+         </div>
+     </div>
+    </section>
+    <footer>
+        <p class="footer-menu"> Copyright &copy; 2021. All right reserve Raihan</p>
+    </footer>
     
 </body>
 </html>
