--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         
         </div>
         <div class="half-width">
-            <img src="images/my-bg.png" alt="Raihan">
+            <img src="Images/my-bg.png" alt="Raihan">
         </div>
     </section>
     <section class=" dream-big flexible-container">
         <div class="half-width">
-        <img src="images/my-bg2 (1).png" alt="Raihan">
+        <img src="Images/my-bg2 (1).png" alt="Raihan">
         </div>
         <div>
             <h1>Dream Big</h1>
